[Unchecked] Replace Collections.EMPTY_LIST/SET with typed methods
Replace raw-typed Collections.EMPTY_LIST and Collections.EMPTY_SET
with their generic equivalents Collections.emptyList() and
Collections.emptySet(). The raw constants return unparameterized
List/Set, causing unchecked conversion warnings when assigned to
or passed as generic types.

This is part of the effort to enable -Xlint:unchecked globally.

Bug: 358366667
Change-Id: I359baefbe53afd182d471063400502ecbfd36bae
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7728941
Commit-Queue: Andrew Grieve <agrieve@chromium.org>
Reviewed-by: Andrew Grieve <agrieve@chromium.org>
Reviewed-by: Peter Wen <wnwen@chromium.org>
Owners-Override: Andrew Grieve <agrieve@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1610845}